--- a/style.css
+++ b/style.css
@@ -5,5 +5,17 @@
 
 .header {
   display: flex;
+  justify-content: space-around;
+  align-items: center;
   background-color: rgb(50, 167, 145);
+  height: 80px;
+}
+
+.trybewarts-header-logo {
+  height: 100%;
+}
+
+.trybewarts-login {
+  display: flex;
+  height: 20px;
 }
