Altera eixo do formulário, localizado na tag main.

--- a/style.css
+++ b/style.css
@@ -20,7 +20,11 @@
   height: 20px;
 }
 
-main, #evaluation-form {
+main , #evaluation-form {
   display: flex;
   width: 675px;
+}
+
+#evaluation-form {
+  flex-direction: column;
 }
