Adiciona Logo trybewarts.

--- a/style.css
+++ b/style.css
@@ -22,9 +22,13 @@
 
 main , #evaluation-form {
   display: flex;
-  width: 675px;
 }
 
 #evaluation-form {
   flex-direction: column;
+  width: 675px;
+}
+
+#trybewarts-forms-logo {
+  
 }
