--- a/style.css
+++ b/style.css
@@ -29,3 +29,20 @@ main , #evaluation-form {
   width: 675px;
 }
 
+#label-content {
+  display: flex;
+  padding: 2%;
+}
+
+#container-checkbox {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.input-checkbox {
+  display: flex;
+  justify-content: space-around;
+  padding: 2%;
+  width: 55%;
+}
