Acrescenta ao formulario um campo de entrada para qual familia a pessoa estudante de identifica

--- a/style.css
+++ b/style.css
@@ -28,3 +28,8 @@ main , #evaluation-form {
   flex-direction: column;
   width: 675px;
 }
+
+#family-section {
+  display: flex;
+  flex-direction: column;
+}
